--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -891,7 +891,7 @@
                     </div>
                 </div>
             </div>
-            <div id="loading" style="display:none">
+            <div id="loading-epd" style="display:none">
                 <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
                 <span class="sr-only">Loading...</span>
             </div>
@@ -901,6 +901,9 @@
             <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem;"></table>
             <fieldset class="border-secondary">
                 <legend class="text-secondary">Перечень вагонов</legend>
+                <div id="loading-cars" style="display:none">
+                    Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
+                </div>
                 <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem;"></table>
             </fieldset>
         </fieldset>
