fix panel search doc

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -895,6 +895,7 @@
                 <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
                 <span class="sr-only">Loading...</span>
             </div>
+            <label id="time-epd" class="col-form-label"></label>
         </div>
         <fieldset class="border-primary">
             <legend class="text-primary">Документы</legend>
