--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -902,7 +902,7 @@
             <table class="table table-striped table-bordered mb-1" id="table-list-epd" style="width:100%; font-size:0.8rem;"></table>
             <fieldset class="border-secondary">
                 <legend class="text-secondary">Перечень вагонов</legend>
-                <div id="loading-cars" style="display:none">
+                <div id="loading-cars" class="text-danger" style="display:none">
                     Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                 </div>
                 <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem;"></table>
