--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -152,7 +152,6 @@
 
 <div class="cd-cars-detali">
     <div class="container-fluid">
-
         <form class="cd-form">
             <div class="card border-secondary">
                 <div class="card-header bg-secondary text-white" id="sostav-info">
@@ -913,7 +912,35 @@
     </form>
 </div>
 
-
+<div id="manual-car" title="" style="display:none">
+    <div class="alert" id="manual-car-alert"></div>
+    <form id="form-manual-car">
+        <div class="form-row">
+            <div class="col-md-3 mb-1 text-right">
+                <label for="num_epd_to_search" class="col-form-label">Добавить номера вручную:</label>
+            </div>
+            <div class="col-md-8 mb-1 text-left">
+                <div class="input-group">
+                    <textarea class="form-control" id="manual_num_car" name="manual_num_car" title="Добавить номера вагонов, несколько вагонов разделяются ';'"></textarea>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-warning btn" id="bt_num_car_search" title="Найти информацию по вагону в ИДС">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <fieldset class="border-primary">
+            <legend class="text-primary">Вагоны</legend>
+            <div id="loading-cars" class="text-danger" style="display:none">
+                Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
+            </div>
+            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem;"></table>
+        </fieldset>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
 
 
 
