save car in manual num

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -854,7 +854,7 @@
                                         <i class="fa fa-file-code-o" aria-hidden="true"></i>
                                     </button>
                                     <button type="button" class="btn btn-warning btn-sm" id="add-num-car-manual" title="Добавить вагон вручную">
-                                        <i class="fa fa-train" aria-hidden="true"></i>
+                                        <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
                                     </button>
                                 </div>
                                 <div class="card-body text-primary" style="padding: 0.5rem;">
