--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -693,25 +693,25 @@
                                             </div>
                                             <div class="col-md-3 mb-1 text-left">
                                                 <label for="uz_cargo_vesg_doc" class="col-form-label">@IDSRWTResource.title_vesg_doc:</label>
-                                                <input type="text" class="form-control inp-epd" id="uz_cargo_vesg_doc" name="uz_cargo_vesg_doc" title="ЭПД [OTPR/VAGON/COLLECT_V/vesg] -> Вес груза" data-mode="all" data-edit="" data-form="transceiver">
+                                                <input type="number" class="form-control inp-epd" id="uz_cargo_vesg_doc" name="uz_cargo_vesg_doc" title="ЭПД [OTPR/VAGON/COLLECT_V/vesg] -> Вес груза" data-mode="all" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
                                             <div class="col-md-3 mb-1 text-left">
                                                 <label for="uz_cargo_vesg_reweighing" class="col-form-label">@IDSRWTResource.title_vesg_reweighing:</label>
-                                                <input type="text" class="form-control inp-auto" id="uz_cargo_vesg_reweighing" name="uz_cargo_vesg_reweighing" title="Автоматически берется из системы ЕБД -> Вес груза после перевески" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="number" class="form-control inp-auto" id="uz_cargo_vesg_reweighing" name="uz_cargo_vesg_reweighing" title="Автоматически берется из системы ЕБД -> Вес груза после перевески" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
                                             <div class="col-md-2 mb-1 text-left">
                                                 <label for="uz_cargo_vesg_difference" class="col-form-label">@IDSRWTResource.title_vesg_difference:</label>
-                                                <input type="text" class="form-control inp-auto" id="uz_cargo_vesg_difference" name="uz_cargo_vesg_difference" title="Автоматически вычисляется после перевески -> Разница веса" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="number" class="form-control inp-auto" id="uz_cargo_vesg_difference" name="uz_cargo_vesg_difference" title="Автоматически вычисляется после перевески -> Разница веса" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
                                             <div class="col-md-2 mb-1 text-left">
                                                 <label for="uz_cargo_nom_zpu" class="col-form-label">@IDSRWTResource.title_nom_zpu:</label>
-                                                <input type="number" class="form-control inp-epd" id="uz_cargo_nom_zpu" name="uz_cargo_nom_zpu" title="ЭПД [OTPR/VAGON/ZPU_V/nom_zpu] -> Номер ЗПУ" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control inp-epd" id="uz_cargo_nom_zpu" name="uz_cargo_nom_zpu" title="ЭПД [OTPR/VAGON/ZPU_V/nom_zpu] -> Номер ЗПУ" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -719,7 +719,7 @@
                                         <div class="form-row">
                                             <div class="col-md-2 mb-1 text-left">
                                                 <label for="uz_cargo_danger_class" class="col-form-label">@IDSRWTResource.title_danger_class:</label>
-                                                <input type="text" class="form-control inp-epd" id="uz_cargo_danger_class" name="uz_cargo_danger_class" title="ЭПД [OTPR/VAGON/COLLECT_V/danger] -> Класс опасности" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="number" class="form-control inp-epd" id="uz_cargo_danger_class" name="uz_cargo_danger_class" title="ЭПД [OTPR/VAGON/COLLECT_V/danger] -> Класс опасности" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
