--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -392,9 +392,12 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-6 mb-1 text-right">
-                                                <label class="col-form-label" for="card_vag_add">@IDSRWTResource.title_card_vag</label>
+                                                <label class="col-form-label">@IDSRWTResource.title_card_vag</label>
                                                 <button type="button" class="btn btn-danger btn" id="card_vag_add" data-form="transceiver" title="Добавить новую запись карточки вагона в справочник 'Карточка вагона', информация берется автоматически из ЭПД и БД УЗ">
                                                     <i class="fa fa-save" aria-hidden="true"></i>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn" id="card_vag_searsh" data-mode="all" data-edit="" data-form="transceiver" title="Получить новую запись карточки вагона для справочника 'Карточка вагона', информация берется автоматически из БД УЗ">
+                                                    <i class="fa fa-search-plus" aria-hidden="true"></i>
                                                 </button>
                                                 <div class="invalid-feedback">
                                                 </div>
