point start enable\disable edit card vagon

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -406,13 +406,13 @@
                                         <div class="form-row">
                                             <div class="col-md-3 mb-1 text-left">
                                                 <label for="card_vag_kod_adm" class="col-form-label">@IDSRWTResource.title_kod_adm:</label>
-                                                <input type="text" class="form-control inp-epd" title="ЭПД [OTPR/VAGON/kod_adm]" id="card_vag_kod_adm" name="card_vag_kod_adm" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control inp-epd" title="ЭПД [OTPR/VAGON/kod_adm]" id="card_vag_kod_adm" name="card_vag_kod_adm" data-mode="view-global" data-edit="" data-form="transceiver" data-type="vagon-card">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
                                             <div class="col-md-3 mb-1 text-left">
                                                 <label for="card_vag_name_adm" class="col-form-label">@IDSRWTResource.title_name_adm:</label>
-                                                <select class="form-control inp-epd" id="card_vag_name_adm" title="ЭПД [OTPR/VAGON/kod_adm] -> Справочник 'Стран' -> Название Администрации" name="card_vag_name_adm" data-mode="all" data-edit="" data-form="transceiver"></select>
+                                                <select class="form-control inp-epd" id="card_vag_name_adm" title="ЭПД [OTPR/VAGON/kod_adm] -> Справочник 'Стран' -> Название Администрации" name="card_vag_name_adm" data-mode="all" data-edit="" data-form="transceiver" data-type="vagon-card"></select>
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
