start test arrival car to excel

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -715,7 +715,7 @@
                                             </div>
                                             <div class="col-md-2 mb-1 text-left">
                                                 <label for="uz_cargo_nom_zpu" class="col-form-label">@IDSRWTResource.title_nom_zpu:</label>
-                                                <input type="text" class="form-control inp-epd" id="uz_cargo_nom_zpu" name="uz_cargo_nom_zpu" title="ЭПД [OTPR/VAGON/ZPU_V/nom_zpu] -> Номер ЗПУ" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control inp-epd" id="uz_cargo_nom_zpu" name="uz_cargo_nom_zpu" title="ЭПД [OTPR/VAGON/ZPU_V/nom_zpu] -> Номер ЗПУ" data-mode="all" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
