--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -181,10 +181,10 @@
                                 <div class="card-header">Информация о вагоне</div>
                                 <div class="card-body text-dark">
                                     <button type="button" class="btn btn-primary btn" id="arrival-car" data-mode="edit-global" data-edit="" data-form="transceiver"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Принять вагон</button>
-                                    <button type="button" class="btn btn-warning btn" id="mode-view">View</button>
+                                    @*<button type="button" class="btn btn-warning btn" id="mode-view">View</button>
                                     <button type="button" class="btn btn-warning btn" id="mode-edit">Edit</button>
                                     <button type="button" class="btn btn-success btn" id="mode-open">Open</button>
-                                    <button type="button" class="btn btn-success btn" id="mode-close">Close</button>
+                                    <button type="button" class="btn btn-success btn" id="mode-close">Close</button>*@
                                     <fieldset class="border-primary">
                                         <div class="form-row">
                                             <div class="col-md-3 mb-1 text-left">
@@ -842,7 +842,7 @@
                         <div class="col-md-1 mb-1">
                             <div class="card border-primary" id="card-not-arrived-cars">
                                 <div class="card-header">
-                                    Вагоны
+                                    Вагоны<br />
                                     <button type="button" class="btn btn-warning btn-sm" id="add-num-car-of-epd" title="Найти вагоны по ЭПД, поиск документа по номеру">
                                         <i class="fa fa-file-code-o" aria-hidden="true"></i>
                                     </button>
